# eka

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install-manpage.sh
docs/: ROADMAP.md  eka-architecture.md  eka.1
src/: cli.rs  colors.rs  directory.rs  formatter.rs  main.rs  types.rs
